--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <link rel="icon" type="image/svg+xml" href="/webicon_V1.svg" />
     <title>NutriFit - Descubre por qué no bajas de peso</title>
     <meta name="description" content="Test personalizado para identificar las causas por las que no estás perdiendo peso. Plan de hábitos basado en ciencia conductual, no en dietas restrictivas." />
     <meta name="author" content="NutriFit" />
